# page-analyzer

./: .gitignore  Makefile  README.md  database.sql  pyproject.toml
page_analyzer/: __init__.py  app.py  database_functions.py  html_parser.py  utils.py
page_analyzer/templates/: index.html  show_all_urls.html  show_url.html
